@@ -1,14 +1,14 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.23 2009-02-19 01:06:32 chu11 Exp $
+## $Id: Makefile.am,v 1.24 2009-08-11 17:07:09 chu11 Exp $
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
 
-INSTALLSITEARCH=`$(PERL) -e 'use Config; $$T=$$Config{installsitearch}; $$T=~/^\Q$$Config{siteprefix}\E\/(.+)/; print $$1;'`
+INSTALLSITEARCH=`$(PERL) -e 'use Config; $$T=$$Config{installsitearch}; print $$T;'`
  
 if WITH_PERL_EXTENSIONS
 GENDERSLLNLPMFILES = Gendersllnl.pm
-GENDERSLLNLPMFILESdir = $(prefix)/$(INSTALLSITEARCH)
+GENDERSLLNLPMFILESdir = $(INSTALLSITEARCH)
 GENDERSLLNLPMFILES_DATA = $(GENDERSLLNLPMFILES)
  
 Gendersllnl.$(PERLMAN3EXT):
@@ -21,7 +21,7 @@ Gendersllnl.$(PERLMAN3EXT):
 man3_MANS = Gendersllnl.$(PERLMAN3EXT)
  
 install-data-hook:
-	chmod 444 $(DESTDIR)/$(prefix)/$(INSTALLSITEARCH)/Gendersllnl.pm
+	chmod 444 $(DESTDIR)/$(INSTALLSITEARCH)/Gendersllnl.pm
 endif
  
 EXTRA_DIST = Gendersllnl.pm
